Basic entity processing. Moving on to position keeping
